[package]
name = "memory_machines_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.11", features = ["credentials-login"] }
aws-sdk-dynamodb = "1.100.0"
tokio = { version = "1.48.0", features = ["full"] }
lambda_runtime = "0.8.0"
aws-sdk-lambda = { version = "1.3.0" }
serde = "1.0.228"
serde_json = "1.0.145"
aws_lambda_events = "1.0.1"
lambda_http = "1.0.1"
