[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = "1"
aws_lambda_events = { version = "0.15", default-features = false, features = ["sqs"] }
lambda_runtime = "0.13"
regex = "1"
chrono = "0.4"
uuid = "1.19.0"
